# Muchachota_C

./: .gitignore  CMakeLists.txt  partitions.csv  publish.ps1  sdkconfig.defaults
components/ota_http/: CMakeLists.txt  README.md  ota_http.c
components/ota_http/include/: ota_http.h
components/ota_http/templates/: partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c
